@@ -2,7 +2,8 @@
  * @test /nodynamiccopyright/
  * @bug 8263590
  * @summary Verify correct warnings are produced for raw types in bindings
- * @compile/ref=RawTypeBindingWarning.out -Xlint:rawtypes -XDrawDiagnostics --enable-preview -source ${jdk.version} RawTypeBindingWarning.java
+ * @enablePreview
+ * @compile/ref=RawTypeBindingWarning.out -Xlint:rawtypes -XDrawDiagnostics RawTypeBindingWarning.java
  */
 public class RawTypeBindingWarning<T> {
     public static boolean t(Object o) {
